--- a/noticia1.html
+++ b/noticia1.html
@@ -16,7 +16,7 @@
         <h1 class="head">PC NOTICIAS</h1>
         <p class="parrafo-titulo">
           pagina dedicada a noticias sobre el mundo de la informatica y las
-          novedades tecnologicas.
+          novedades en el gaming.
         </p>
       </div>
       <button id="modeToggle">Claro/Oscuro</button>
@@ -184,3 +184,4 @@
     </div>
   </body>
 </html>
+
